Android限定NFC HCE機能を追加しQRコード表示中にURL送信可能に

--- a/app.json
+++ b/app.json
@@ -37,7 +37,8 @@
             "backgroundColor": "#0F0E0C"
           }
         }
-      ]
+      ],
+      "./plugins/withNfcHce"
     ],
     "experiments": {
       "typedRoutes": true
